# puremagic

./: .black.toml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  LICENCE  LICENSE  MANIFEST.in  README  README.md  README.rst  magic_array.data  magic_data.py  puremagic.py  pyproject.toml  requirements-test.txt  setup.cfg  setup.py
.claude/skills/: changelog.md
.github/workflows/: pythonpublish.yml  tests.yml
puremagic/: __init__.py  __main__.py  magic_data.json  main.py
puremagic/scanners/: cfbf_scanner.py  hdf5_scanner.py  helpers.py  json_scanner.py  mpeg_audio_scanner - Copy.py  mpeg_audio_scanner.py  pdf_scanner.py  python_scanner.py  sndhdr_scanner.py  text_scanner.py  zip_scanner.py
scripts/: parse_ftk_kessler_sigs.py
test/: common.py  test_common_extensions.py  test_main.py  test_scanners.py  timing.py
test/resources/: fake_file
test/resources/archive/: test.7z  test.bz2  test.cb7  test.cbt  test.cbz  test.fbz  test.rar  test.tar  test.xz
test/resources/audio/: test.aac  test.aif  test.flac  test.opus  test.sndr
test/resources/images/: test.avif  test.psd  test.tif  test.xcf
test/resources/media/: test (single).vmdk  test (split).vmdk  test.iso  test.mdf  test.swf
test/resources/office/: test.doc  test.docm  test.docx  test.dotm  test.dotx  test.eml  test.fb2  test.msg  test.odp  test.ods  test.odt  test.potm  test.potx  test.ppt  test.pptm  test.pptx  test.pub  test.txt  test.xls  test.xlsb  test.xlsm  test.xlsx  test.xltm  test.xltx  test_utf16le.csv  text_cr.txt  text_crlf.txt
test/resources/system/: test.json  test.puremagic_multi_footer  test.py
test/resources/video/: test.3gp  test.avi  test.flv  test.jxsv  test.m4v  test.mkv  test.mpg  test.wmv
